[package]
name = "rhm"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12.6"
structopt = "0.3.26"
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "cluster"
path = "src/cluster.rs"

